# ai_pytorch_demo

./: Binary_Classification_demo.py  Convolution_relu_demo.py  Deep_Learning_demo.py  FastApi_demo.py  LSTM_demo.py  Lightning_module_demo.py  README.md  ResNet-18_demo.py  accumulate_params.py  alexnet_demo.py  autograd_demo.py  backpropagation.py  backpropagation_demo.py  cnn_demo.py  cnn_demo2.py  cnn_mri_demo.py  cnn_tl_demo.py  config.yaml  confrontation_training_demo.py  cuda_demo.py  custom_convnets_demo.py  data-visualizations.py  data_loader_demo.py  data_operate.py  dcg_demo.py  decoder-only_demo.py  demo.sh  depth_separable_demo.py  dropout_demo.py  ema_demo.py  feature_engineing_demo.py  feature_engineing_practice.py  flu_trends_demo.py  forecasting_strategies.py  game_ai_demo.py  gan_ct_demo.py  generalization_demo.py  gpt_demo.py  hello.py  hyperparameter_search_demo.py  (+68 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  hello-checkpoint.py  notebook_test-checkpoint.py
algorithm/: heap.py
baseline/: con_multi_thread.py  con_multiprocessing.py  con_single_thread.py  con_single_thread.spec
cluster/: covariance_2_demo.py  covariance_demo.py  dirichlet_demo.py  factor_analysis_demo.py  gaussian_mixture.py  ica_demo.py  isolation_forest.py  kde_demo.py  kmeans_plusplus.py  kmeans_test.py  lof_tests.py  mcd_mle.py  pca_demo.py  rbm_demo.py  robust_convariance.py  sparse_code_demo.py
excel/: excel_operation.py  excel_with_list.xlsx  excel_with_multiple_sheets.xlsx  height_data_merged.csv  person.xlsx
federated_learning/: lession_1.py  lession_3.py  lession_4.py  (+2 more)
(+28 files in other folders)
